[package]
name = "matrix-multiply-appchain"
version = "0.1.0"
edition = "2021"


[dependencies]
avail-subxt = { git = "https://github.com/maticnetwork/avail", tag = "v1.3.0" }
anyhow = "1.0.66"
sp-keyring = "6.0.0"
subxt = "0.24.0"
structopt = "0.3.25"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
futures = "0.3"
nalgebra = { version = "0.31.4", features = ["rand", "serde-serialize"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2.6.0", features = ["json-using-serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
